fix: Experience Title on mobile devices smaller

--- a/src/app/structural-components/experience-section/experience-section.component.css
+++ b/src/app/structural-components/experience-section/experience-section.component.css
@@ -155,3 +155,9 @@ i {
     font-size: 14px;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .heading {
+    font-size: 20px;
+  }
+}
